--- a/client/src/Components/Home/Homepage.css
+++ b/client/src/Components/Home/Homepage.css
@@ -1,14 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-.home{
-    margin: 100px auto;
-    width: 1200px;
-}
-
-.home .homeContainer{
-    margin: auto;
-    width: 1200px;
+.staff .staffContainer .showFood .show-data .oneContainer .twopoint button{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 150px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: #1976d2;
+    color: #fff;
+    font-size: 20px;
 }
