--- a/client/src/Components/Track/FoodTrack.css
+++ b/client/src/Components/Track/FoodTrack.css
@@ -54,3 +54,17 @@
 .track .orderContainer .oderShow .showBuy:hover i{
     display: block;
 }
+
+.track .orderContainer .oderShow .showBuy button{
+    border: none;
+    border-radius: 5px;
+    height: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 100px;
+    background-color: #1976d2;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+}
